[gd_scene load_steps=35 format=2]

[ext_resource path="res://data/scripts/world.gd" type="Script" id=1]
[ext_resource path="res://data/scripts/ui.gd" type="Script" id=2]
[ext_resource path="res://data/fonts/segoe.font" type="BitmapFont" id=3]
[ext_resource path="res://data/graphics/char1.png" type="Texture" id=4]
[ext_resource path="res://data/graphics/char2.png" type="Texture" id=5]
[ext_resource path="res://data/graphics/char3.png" type="Texture" id=6]
[ext_resource path="res://data/graphics/settings.png" type="Texture" id=7]
[ext_resource path="res://data/graphics/schoolbag.png" type="Texture" id=8]
[ext_resource path="res://data/graphics/mobile.png" type="Texture" id=9]
[ext_resource path="res://data/graphics/map.png" type="Texture" id=10]
[ext_resource path="res://data/graphics/calendar_checked.png" type="Texture" id=11]
[ext_resource path="res://data/asset scenes/phone_ui.tscn" type="PackedScene" id=12]
[ext_resource path="res://data/asset scenes/schoolbag_UI.tscn" type="PackedScene" id=13]
[ext_resource path="res://data/asset scenes/map_ui.tscn" type="PackedScene" id=14]
[ext_resource path="res://data/asset scenes/calendar_UI.tscn" type="PackedScene" id=15]
[ext_resource path="res://data/npcs/ellie.tscn" type="PackedScene" id=16]
[ext_resource path="res://data/asset scenes/object.tscn" type="PackedScene" id=17]
[ext_resource path="res://data/asset scenes/dialogue.tscn" type="PackedScene" id=18]
[ext_resource path="res://data/scripts/scene.gd" type="Script" id=19]
[ext_resource path="res://data/locations/schoolyard.tscn" type="PackedScene" id=20]
[ext_resource path="res://data/graphics/white.png" type="Texture" id=21]
[ext_resource path="res://data/asset scenes/player.tscn" type="PackedScene" id=22]

[sub_resource type="Environment" id=1]

background_mode = 0
background_sky_custom_fov = 0.0
background_color = Color( 0, 0, 0, 1 )
background_energy = 1.0
background_canvas_max_layer = 0
ambient_light_color = Color( 0.556641, 0.724792, 0.742188, 1 )
ambient_light_energy = 1.0
ambient_light_sky_contribution = 1.0
fog_enabled = false
fog_color = Color( 0.5, 0.6, 0.7, 1 )
fog_sun_color = Color( 1, 0.9, 0.7, 1 )
fog_sun_amount = 0.0
fog_depth_enabled = true
fog_depth_begin = 10.0
fog_depth_curve = 1.0
fog_transmit_enabled = false
fog_transmit_curve = 1.0
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 100.0
fog_height_curve = 1.0
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = false
auto_exposure_scale = 0.4
auto_exposure_min_luma = 0.05
auto_exposure_max_luma = 8.0
auto_exposure_speed = 0.5
ss_reflections_enabled = false
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = true
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_quality = 0
ssao_blur = 3
ssao_edge_sharpness = 4.0
dof_blur_far_enabled = false
dof_blur_far_distance = 10.0
dof_blur_far_transition = 5.0
dof_blur_far_amount = 0.1
dof_blur_far_quality = 1
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = false
glow_levels/1 = false
glow_levels/2 = false
glow_levels/3 = true
glow_levels/4 = false
glow_levels/5 = true
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 0.8
glow_strength = 1.0
glow_bloom = 0.0
glow_blend_mode = 2
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = false
adjustment_enabled = false
adjustment_brightness = 1.0
adjustment_contrast = 1.0
adjustment_saturation = 1.0
_sections_unfolded = [ "Ambient Light", "Background", "Fog", "SSAO" ]

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 64.6215

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 61.0041

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 64.1907

[sub_resource type="CircleShape2D" id=5]

custom_solver_bias = 0.0
radius = 63.1471

[sub_resource type="CircleShape2D" id=6]

custom_solver_bias = 0.0
radius = 56.4041

[sub_resource type="CircleShape2D" id=7]

custom_solver_bias = 0.0
radius = 53.0022

[sub_resource type="CircleShape2D" id=8]

custom_solver_bias = 0.0
radius = 47.2968

[sub_resource type="CircleShape2D" id=9]

custom_solver_bias = 0.0
radius = 52.1685

[sub_resource type="PlaneShape" id=10]

plane = Plane( 0, 1, 0, 0 )

[sub_resource type="Shader" id=11]

code = "shader_type canvas_item;

uniform float amount : hint_range(0,5);

void fragment() {

	COLOR.rgb = textureLod(SCREEN_TEXTURE,SCREEN_UV,amount).rgb;
}"

[sub_resource type="ShaderMaterial" id=12]

render_priority = 0
shader = SubResource( 11 )
shader_param/amount = 4.0
_sections_unfolded = [ "shader_param" ]

[node name="world" type="Node" index="0"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="0"]
environment = SubResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="." index="1"]
transform = Transform( -0.838498, -0.0252218, 0.54432, 0.40072, 0.648371, 0.647332, -0.369248, 0.760907, -0.533551, 10.8896, 12.4282, -12.6185 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Shadow" ]

[node name="Camera" type="Camera" parent="." index="2"]
transform = Transform( 0.918464, 0.291216, -0.267613, -0.0580409, 0.768558, 0.637142, 0.391222, -0.56966, 0.722795, -5.25547, 9.25033, 15.9494 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="ui" type="Control" parent="." index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 2 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Visibility" ]

[node name="dateLabel" type="Label" parent="ui" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 13.0
margin_top = 5.0
margin_right = 335.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.550763, 0.538559, 0.761719, 1 )
text = "Monday, 8 AM"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="pointsLabel" type="Label" parent="ui" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1764.0
margin_top = 7.0
margin_right = 1857.0
margin_bottom = 69.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
text = "240"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="descriptionLabel" type="Label" parent="ui" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 18.0
margin_top = 1015.0
margin_right = 177.0
margin_bottom = 1077.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 3 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="char1" type="Area2D" parent="ui" index="3"]
editor/display_folded = true
position = Vector2( 1812.96, 146.396 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Sprite" type="Sprite" parent="ui/char1" index="0"]
position = Vector2( 0.059082, -1.54956 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ui/char1" index="1"]
position = Vector2( -2.55891, 0.235825 )
shape = SubResource( 2 )

[node name="char2" type="Area2D" parent="ui" index="4"]
editor/display_folded = true
position = Vector2( 1817.77, 304.011 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Sprite" type="Sprite" parent="ui/char2" index="0"]
position = Vector2( -2.88672, -1.29428 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ui/char2" index="1"]
position = Vector2( -1.09167, 0.598423 )
shape = SubResource( 3 )

[node name="char3" type="Area2D" parent="ui" index="5"]
editor/display_folded = true
position = Vector2( 1742.75, 335.133 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Sprite" type="Sprite" parent="ui/char3" index="0"]
position = Vector2( 72.8421, 131.84 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ui/char3" index="1"]
position = Vector2( 73.8691, 134.445 )
shape = SubResource( 4 )

[node name="settings" type="Area2D" parent="ui" index="6"]
editor/display_folded = true
position = Vector2( 1816.75, 635.818 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Sprite" type="Sprite" parent="ui/settings" index="0"]
position = Vector2( -3.73492, 1.64922 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ui/settings" index="1"]
position = Vector2( -2.99091, 0.0382233 )
shape = SubResource( 5 )

[node name="schoolbag" type="Area2D" parent="ui" index="7" groups=[
"UI_icons",
]]
editor/display_folded = true
position = Vector2( 235, 536 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Pickable" ]

[node name="Sprite" type="Sprite" parent="ui/schoolbag" index="0"]
position = Vector2( 579.032, 463.226 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ui/schoolbag" index="1"]
position = Vector2( 575.795, 466.592 )
shape = SubResource( 6 )

[node name="phone" type="Area2D" parent="ui" index="8" groups=[
"UI_icons",
]]
editor/display_folded = true
position = Vector2( 319, 473 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="ui/phone" index="0"]
position = Vector2( 652.041, 526.164 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ui/phone" index="1"]
position = Vector2( 650.415, 519.668 )
shape = SubResource( 7 )

[node name="map" type="Area2D" parent="ui" index="9" groups=[
"UI_icons",
]]
editor/display_folded = true
position = Vector2( 550, 407 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="ui/map" index="0"]
position = Vector2( 568.962, 589.103 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ui/map" index="1"]
position = Vector2( 565.873, 587.915 )
shape = SubResource( 8 )

[node name="calendar" type="Area2D" parent="ui" index="10" groups=[
"UI_icons",
]]
editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Sprite" type="Sprite" parent="ui/calendar" index="0"]
position = Vector2( 1815.76, 997.246 )
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ui/calendar" index="1"]
position = Vector2( 1821.16, 1004 )
shape = SubResource( 9 )

[node name="phone_ui" parent="ui" index="11" instance=ExtResource( 12 )]
z_index = 99
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Z Index" ]

[node name="schoolbag_ui" parent="ui" index="12" instance=ExtResource( 13 )]
position = Vector2( 666.235, 1087.7 )
z_index = 98
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Z Index" ]

[node name="map_ui" parent="ui" index="13" instance=ExtResource( 14 )]
position = Vector2( 209.654, 1078.39 )
scale = Vector2( 1.5, 1.6 )
z_index = 97
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="calendar_ui" parent="ui" index="14" instance=ExtResource( 15 )]
position = Vector2( 274.88, 1083.05 )
z_index = 96
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Z Index" ]

[node name="cursor_default" type="Panel" parent="ui" index="15"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 5.0
margin_bottom = 5.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="npcs" type="Node" parent="." index="4"]

[node name="npc" parent="npcs" index="0" instance=ExtResource( 16 )]

[node name="objects" type="Node" parent="." index="5"]
editor/display_folded = true

[node name="object" parent="objects" index="0" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.122, 1.70829, 0 )

[node name="dialogue" parent="." index="6" instance=ExtResource( 18 )]
z_index = 95
_sections_unfolded = [ "Z Index" ]

[node name="scene" type="Area" parent="." index="7"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.932482, 0 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0
script = ExtResource( 19 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="col" type="CollisionShape" parent="scene" index="0"]
transform = Transform( 50, 0, 0, 0, 1, 0, 0, 0, 50, 0, -0.321356, 0 )
shape = SubResource( 10 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Area" parent="scene" index="1" instance=ExtResource( 20 )]
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="effects" type="Node" parent="." index="8"]

[node name="blurfx" type="TextureRect" parent="effects" index="0"]
show_behind_parent = true
material = SubResource( 12 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
texture = ExtResource( 21 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Visibility" ]

[node name="tween" type="Tween" parent="effects" index="1"]
repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="player" parent="." index="9" instance=ExtResource( 22 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0621125, 0 )

[node name="rotation_helper" parent="player" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.981376, 0 )

[connection signal="mouse_entered" from="ui/schoolbag" to="ui" method="_on_schoolbag_mouse_entered"]
[connection signal="mouse_exited" from="ui/schoolbag" to="ui" method="_on_schoolbag_mouse_exited"]
[connection signal="mouse_entered" from="ui/phone" to="ui" method="_on_phone_mouse_entered"]
[connection signal="mouse_exited" from="ui/phone" to="ui" method="_on_phone_mouse_exited"]
[connection signal="mouse_entered" from="ui/map" to="ui" method="_on_map_mouse_entered"]
[connection signal="mouse_exited" from="ui/map" to="ui" method="_on_map_mouse_exited"]
[connection signal="mouse_entered" from="ui/calendar" to="ui" method="_on_calendar_mouse_entered"]
[connection signal="mouse_exited" from="ui/calendar" to="ui" method="_on_calendar_mouse_exited"]
[connection signal="input_event" from="scene" to="player" method="_on_scene_input_event"]

[editable path="dialogue"]

[editable path="player"]
